Add initial template and styles

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,15 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container">
-      <div class="card spade">
-        8
+    <div class="container flex-centered">
+      <div class="card">
+        <span class="suit before">
+          ♠
+        </span>
+        <span class="number">8</span>
+        <span class="suit after">
+          ♠
+        </span>
       </div>
     </div>
   </body>
