--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,9 @@
   <body>
     <div class="container flex-centered">
       <div class="card">
-        <span class="suit before">
-          ♠
-        </span>
-        <span class="number">8</span>
-        <span class="suit after">
-          ♠
-        </span>
+        <span class="suit before"></span>
+        <span class="value"></span>
+        <span class="suit after"></span>
       </div>
     </div>
   </body>
