--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
   </head>
   <body>
     <div class="container flex-centered">
+      <nav>
+        <div>
+          <input type="checkbox" id="auto-shuffle" name="auto-shuffle" />
+          <label for="auto-shuffle">Auto shuffle</label>
+        </div>
+        <button type="button" class="shuffle-btn">Shuffle cards</button>
+      </nav>
       <div class="card">
         <span class="suit before"></span>
         <span class="value"></span>
