Add tempalte and styles for size-slider

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,17 @@
     <div class="container flex-centered">
       <nav>
         <div>
+          <label for="size-slider">Card Size</label>
+          <input
+            type="range"
+            min="20"
+            max="90"
+            value="50"
+            class="slider"
+            id="size-slider"
+          />
+        </div>
+        <div>
           <input type="checkbox" id="auto-shuffle" name="auto-shuffle" />
           <label for="auto-shuffle">Auto shuffle</label>
         </div>
